Nosotros.html actualizado (Barra nav)

--- a/assets/html/nosotros.html
+++ b/assets/html/nosotros.html
@@ -3,11 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <script src="https://kit.fontawesome.com/abf5d5b8a0.js" crossorigin="anonymous"></script>
+    <title>Nosotros</title>
 </head>
 <body>
+    <header class="site-header">
+        <nav class="nav-barra-top">
+            <div class="nav-elementos-izquierda">
+                <div class="nav-logo-restaurante">
+                    <a class="enlace-logo-restaurante" href="../../index.html">
+                        <img class="logo-restaurante" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/d7139db.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="nav-elementos-derecha">
+                <div class="nav-buscador">
+                    <input class="nav-input" type="text" placeholder="Buscar">
+                    <button class="nav-btn-search">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                </div>
+                <a class="nav-zona-iconos" href="">
+                    <b>Locales</b>
+                    <i class="logo-navs fa-solid fa-location-dot"></i>
+                </a>
+                <a class="nav-zona-iconos" href="">
+                    <b>Ingresa o Registrate</b>
+                    <i class="logo-navs fa-solid fa-circle-user"></i>
+                </a>
+                <div class="nav-div-bag">
+                    <a class="nav-zona-iconos" href="">
+                        <span class="contador-bag">0</span>
+                        <i class="logo-navs fa-solid fa-bag-shopping"></i>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div>
-        <a href="../../index.html">Inicio</a>
+        <img class="logo-restauran" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/d7139db.svg" alt="">
     </div>
 </body>
 </html>
