Nosotros.html terminado - faltan cambiar colores

--- a/assets/html/nosotros.html
+++ b/assets/html/nosotros.html
@@ -11,7 +11,7 @@
     <title>Nosotros</title>
 </head>
 <body>
-    <header class="site-header">
+    <header class="header-container">
         <nav class="nav-barra-top">
             <div class="nav-elementos-izquierda">
                 <div class="nav-logo-restaurante">
@@ -44,8 +44,128 @@
             </div>
         </nav>
     </header>
-    <div>
-        <img class="logo-restauran" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/d7139db.svg" alt="">
-    </div>
+    <main>
+        <div class="main-div-info">
+            <div class="div-contenedor-info">
+                <h1 class="titulo-info">Nosotros</h1>
+                <div class="div-contenedor-parrafos">
+                    <p>
+                        Decir que somos una empresa peruana con 35 años de experiencia en el mercado de restaurantes consolida nuestra trayectoria, pero no lo dice todo, porque Rokys es mucho más.
+                    </p>
+                    <p>
+                        Aún está fresco en nuestra memoria aquel primer local que fundamos en 1985 en Zárate. Un espacio acogedor con solo 15 mesas y 7 colaboradores que iniciaron lo que hoy se fortalece como la primera cadena de restaurantes que atrae a más de un millón de clientes al mes con más de 75 locales en el país.
+                    </p>
+                    <p>
+                        Tener bajo nuestra responsabilidad a uno de los emblemas gastronómicos más reconocidos dentro y fuera de Perú, nos hace sentir orgullosos. El único sabor del Pollo a la Brasa Rokys es valorado por nuestros clientes a lo largo del tiempo y trasciende incluso nuestras fronteras llegando a Bolivia donde los comensales pueden disfrutar del sabor de Rokys en los más de 6 locales situados en Santa Cruz.
+                    </p>
+                    <p>
+                        Forjamos hitos trascendentales en nuestra historia, pero la principal es el reconocimiento que tenemos de nuestros clientes. Hemos sido parte de su vida en todos estos años y lo agradecemos, no solo su presencia, sino también sus comentarios, sugerencias y principalmente sus constantes visitas, llamadas y pedidos.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer id="zona-footer" class="zona-footer">
+        <div class="p-div-footer">
+            <div class="div-container-modulos">
+                <div class="modulo-info">
+                    <p >
+                        En tu casa o en la nuestra no importa donde estés, siempre vamos a engreirte con el gran sabor que nos caracteriza. ¡Gracias por preferirnos!
+                    </p>
+                    <div class="container-logo-footer">
+                        <a href="">
+                            <img class="img-logo-principal"src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/b972848.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <ul class="modulo-ul-footer">
+                    <h3>MAPA DEL SITIO</h3>
+                    <div class="modulo-container-items">
+                        <li class="items-li-footer">
+                            <a class="redireccion-mapa-sitio" href="">Carta</a>
+                        </li>
+                        <li class="items-li-footer">
+                            <a class="redireccion-mapa-sitio" href="">Promociones</a>
+                        </li>
+                        <li class="items-li-footer">
+                            <a class="redireccion-mapa-sitio" href="">Locales</a>
+                        </li>
+                        <li class="items-li-footer">
+                            <a class="redireccion-mapa-sitio" href="">Nosotros</a>
+                        </li>
+                        <li class="items-li-footer">
+                            <a class="redireccion-mapa-sitio" href="">Venta corporativiva</a>
+                        </li>
+                        <li class="items-li-footer">
+                            <a class="redireccion-mapa-sitio" href="">Eventos/Cumpleaños</a>
+                        </li>
+                    </div>
+                </ul>
+                <ul class="modulo-ul-footer">
+                    <h3>LEGAL</h3>
+                    <div class="modulo-container-items">
+                        <li class="items-li-footer">
+                            <a href="">Términos y condiciones</a>
+                        </li>
+                        <li class="items-li-footer">
+                            <a href="">Políticas de privacidad</a>
+                        </li>
+                        <li class="items-li-footer">
+                            <a href="">Legales</a>
+                        </li>
+                    </div>
+                    <div class="modulo-encuesta">
+                        <h3>ENCUESTA</h3>
+                        <div class="div-container-img-encuesta">
+                            <a href="">
+                                <img class="footer-img-encuesta" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/a69d57a.jpg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </ul>
+                <div class="modulo-fp-lr">
+                    <h3>FORMAS DE PAGO</h3>
+                    <div class="container-img-fp">
+                        <span>
+                            <img class="footer-img-fp" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/e001781.svg" alt="">
+                        </span>
+                        <span>
+                            <img class="footer-img-fp" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/3cdfe69.svg" alt="">
+                        </span>
+                        <span>
+                            <img class="footer-img-fp" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/f81b40e.svg" alt="">
+                        </span>
+                        <span>
+                            <img class="footer-img-fp" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/2d76e88.svg" alt="">
+                        </span>
+                    </div>
+                    <h3>LIBRO DE RECLAMACIONES</h3>
+                    <div class="container-img-lr">
+                        <a href="">
+                            <img class="footer-img-lr"src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/3c486dc.jpg" alt="">
+                        </a>
+                    </div>
+                    <h3>SIGUENOS EN:</h3>
+                    <div class="container-img-redes">
+                        <ul class="ul-container-img-redes">
+                            <li class="li-container-img-redes">
+                                <a href="">
+                                    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+                                </a>
+                            </li>
+                            <li class="li-container-img-redes">
+                                <a href="">
+                                    <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="div-container-derechos">
+                <p>@ROKY'S2020 todos los derechos reservados</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
