Cambios en la barra de nav

--- a/principal.html
+++ b/principal.html
@@ -17,10 +17,18 @@
             <div class=" bg-dark container-fluid px-3 py-1 flex-nowrap" id="id-nav-subcontainer">
                 <div class="container-fluid p-0 text-center" id="id_container-img-home">
                     <div class="row align-items-center">
-                        <div class="col-2 px-1 d-flex justify-content-start">
-                            <img class="logo-restaurante" src="https://d3uqmu8cgrse7a.cloudfront.net/dist/client/img/d7139db.svg" alt="">
+                        <div class="col-2 col-lg-2 px-1 d-flex justify-content-center">
+                            <img class="logo-restaurante" src="assets/Imagenes/icon-restaurant.png" alt="">
                         </div>
-                        <div class="col-6 col-sm-6 col-md-7 pe-0 d-flex justify-content-center justify-content-sm-end justify-content-lg-end ">
+                        <div class="col-3 col-md-4 col-lg-3 px-1 d-flex justify-content-start">
+                            <ul class="d-flex list-inline m-0">
+                                <li class="mx-2"><a href="">Carta</a></li>
+                                <li class="mx-2"><a href="">Promociones</a></li>
+                                <li class="mx-2"><a href="">Locales</a></li>
+                                <li class="mx-2"><a href="">Vales</a></li>
+                            </ul>                        
+                        </div>                       
+                        <div class="col-6 col-sm-6 col-md-3 col-lg-4 pe-0 d-flex justify-content-center justify-content-sm-end justify-content-lg-end ">
                             <form class="d-flex justify-content-start align-items-center" id="id-container-buscar">
                                 <input class="form-control class-comp-buscar" id="id-input-buscar" type="search" placeholder="Buscar Producto" aria-label="Search">
                                 <button class="btn btn-outline-success class-comp-buscar" id="id-btn-buscar" type="submit">
@@ -30,8 +38,8 @@
                                 </button>
                             </form>
                         </div>
-                        <div class="col-4 col-sm-4 col-md-3 d-flex justify-content-center justify-content-md-end align-items-center">
-                            <div class="d-flex justify-content-center align-items-center">
+                        <div class="col-4 col-sm-4 col-md-3 col-lg-3 d-flex justify-content-center justify-content-md-evenly justify-content-lg-evenly align-items-center">
+                            <div class="d-flex align-items-center">
                                 <div class="class-icons-nav mx-1 mx-sm-3" id="id-logo-cart">
                                     <a class="nav-link text-white" id="id-link-listaCarrito" href="">
                                         <span class="d-none">UBICACIONES</span>
@@ -45,7 +53,7 @@
                                     </a>
                                 </div>
                                 <div class="class-icons-nav ms-1 ms-sm-2" id="id-logo-user">
-                                    <ul class="navbar-nav ms-auto me-0 me-md-3 my-2 my-md-0">
+                                    <ul class="navbar-nav ms-auto me-0 my-2 my-md-0">
                                         <li class="nav-item dropdown class-li-inicio">
                                             <a class="nav-link dropdown-toggle" id="id-link-inicioSesion" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="logo-navs fa-solid fa-circle-user"></i></a>
                                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
